# Fabric

./: .clang-format  .clang-tidy  .clangd  .cppcheck-suppressions  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  cmake_test_discovery_3462875a64.json  cmake_test_discovery_add280c254.json  mise.toml  mise.windows.toml  renovate.json  repomix-output.xml
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependency-scan.yml  format.yml  lint.yml  sanitizers.yml
assets/ui/: autosave.rcss  autosave.rml  bt_debug.rml  chunk_debug.rcss  chunk_debug.rml  concurrency.rml  console.rcss  console.rml  content_browser.rml  debug_hud.rcss  debug_hud.rml  hotkey_ref.rcss  hotkey_ref.rml  lod_stats.rml  main_menu.rcss  main_menu.rml  new_world.rml  pause_menu.rcss  pause_menu.rml  settings.rml  shared.rcss  waila.rcss  waila.rml  world_list.rml  world_select.rml  world_transition.rcss  world_transition.rml
cmake/: Constants.g.hh.in  tsan_ignorelist.txt
cmake/modules/: FabricAsio.cmake  FabricBehaviorTree.cmake  FabricBgfx.cmake  FabricEfsw.cmake  FabricEnkiTS.cmake  FabricFastNoise2.cmake  FabricFastgltf.cmake  FabricFlecs.cmake  FabricGLM.cmake  FabricGoogleTest.cmake  FabricHomebrew.cmake  FabricJolt.cmake  FabricLODShaders.cmake  FabricLZ4.cmake  FabricMimalloc.cmake  FabricMiniaudio.cmake  FabricNlohmannJson.cmake  FabricOITShaders.cmake  FabricOzzAnimation.cmake  FabricPaniniShaders.cmake  FabricParticleShaders.cmake  FabricPostShaders.cmake  FabricQuill.cmake  FabricRmlUi.cmake  FabricSDL3.cmake  FabricSQLite.cmake  FabricShaderCompilation.cmake  FabricSkinnedShaders.cmake  FabricSkyShaders.cmake  FabricSmoothShaders.cmake  FabricToml.cmake  FabricTracy.cmake  FabricVoxelShaders.cmake  FabricWaterShaders.cmake  FabricWebView.cmake  FabricZstd.cmake
cmake/patches/: bgfx-vk-suboptimal.patch
config/: fabric.toml  recurse.toml
config/profiles/: full.toml  gameplay.toml  minimal.toml  rendering.toml  sky-only.toml
data/schema/: config.toml  item.toml  npc.toml
docs/: ARCHITECTURE.md  BUILD.md  TESTING.md  TOOLING.md  api.md
docs/recurse/: AESTHETIC.md  AI.md  DESIGN_DOCUMENT.md  FUNCTIONS.md  GAME_LOOP.md  NPCs.md  PROJECT_PLAN.md  QUANTA_FIELDS.md  TRIBES.md
docs/recurse/2_CORE_SIMULATION/: 2.1_WORLD_STATE.md
docs/recurse/3_ENTITY_COMPONENT_SYSTEM/: 3.1_COMPONENTS.md  3.2_ENTITIES.md  3.3_SYSTEMS_OVERVIEW.md
docs/recurse/5_FUNCTION_LANGUAGE/: 5.1_CORE_FUNCTIONS.md
docs/recurse/reference/: FUNCTION_REFERENCE.md  NPC_REFERENCE.md
docs/recurse/systems/: FUNCTION_META_SYSTEM.md  NPC_SYSTEM_DESIGN.md  PROCEDURAL_WORLD_SYSTEM.md  SEMANTIC_SPATIAL_GRAPH.md
include/fabric/codec/: Codec.hh
include/fabric/core/: Animation.hh  AnimationEvents.hh  AppContext.hh  AppModeManager.hh  AssetLoader.hh  AssetRegistry.hh  Async.hh  AudioSystem.hh  BTDebugPanel.hh  BehaviorAI.hh  BgfxCallback.hh  Camera.hh  CameraController.hh  CaveCarver.hh  CharacterController.hh  CharacterTypes.hh  ChunkCoord.hh  ChunkDirtyTracker.hh  ChunkMeshManager.hh  ChunkStreaming.hh  ChunkedGrid.hh  Command.hh  CompilerHints.hh  Component.hh  ConfigManager.hh  Constants.g.hh  ContentBrowser.hh  DashController.hh  DataLoader.hh  DebrisPool.hh  DebugDraw.hh  DefaultConfig.hh  DevConsole.hh  ECS.hh  EssencePalette.hh  Event.hh  FabricApp.hh  FabricAppDesc.hh  FeatureFlags.hh  FieldLayer.hh  (+66 more)
include/fabric/ecs/: Component.hh  ECS.hh  (+1 more)
include/recurse/: BenchmarkStartup.hh
saves/: quicksave.json
scripts/: rename-constants.py
shaders/lod/: fs_lod.sc
shaders/oit/: fs_oit_accum.sc  fs_oit_composite.sc  vs_oit_accum.sc  vs_oit_composite.sc
shaders/panini/: fs_panini.sc
shaders/particle/: fs_particle.sc  varying.def.sc  vs_particle.sc
shaders/post/: fs_blur.sc  fs_bright.sc  fs_tonemap.sc
shaders/rmlui/: fs_rmlui.sc  vs_rmlui.sc
shaders/shared/: varying_voxel_lighting.def.sc
shaders/skinned/: fs_skinned.sc  varying.def.sc  vs_skinned.sc
shaders/sky/: fs_sky.sc  varying.def.sc  vs_sky.sc
shaders/voxel/: fs_voxel.sc  varying.def.sc  vs_voxel.sc
shaders/voxel-lighting/: fs_smooth.sc  varying.def.sc  vs_smooth.sc  vs_voxel.sc
shaders/water/: fs_water.sc  varying.def.sc  vs_water.sc
src/codec/: Codec.cc
src/core/: Animation.cc  AnimationEvents.cc  AppModeManager.cc  AssetRegistry.cc  Async.cc  AudioSystem.cc  BTDebugPanel.cc  BehaviorAI.cc  BgfxCallback.cc  Camera.cc  CameraController.cc  CaveCarver.cc  CharacterController.cc  ChunkDirtyTracker.cc  ChunkMeshManager.cc  ChunkStreaming.cc  Component.cc  ConfigManager.cc  ContentBrowser.cc  DashController.cc  DataLoader.cc  DebrisPool.cc  DebugDraw.cc  DevConsole.cc  ECS.cc  EssencePalette.cc  Event.cc  Fabric.cc  FabricApp.cc  FeatureFlags.cc  FileWatcher.cc  FilteredConsoleSink.cc  FlightController.cc  IKSolver.cc  InputAxis.cc  InputContext.cc  InputManager.cc  InputModeManager.cc  InputRecorder.cc  InputRouter.cc  (+51 more)
src/parser/: ArgumentParser.cc  SyntaxTree.cc
src/platform/: CursorManager.cc  PlatformInfo.cc  WindowDesc.cc
src/recurse/: BenchmarkStartup.cc  Recurse.cc
src/simulation/: ChunkActivityTracker.cc  FallingSandSystem.cc  GhostCells.cc  MaterialRegistry.cc  SimWorkerPool.cc  SimulationGrid.cc  VoxelSimulationSystem.cc
src/ui/: BgfxRenderInterface.cc  BgfxSystemInterface.cc  ChunkDebugPanel.cc  ConcurrencyPanel.cc  DebugHUD.cc  HotkeyPanel.cc  LODStatsPanel.cc  RmlPanel.cc  StbImage.cc  ToastManager.cc  WAILAPanel.cc  WebView.cc
src/utils/: BufferPool.cc  ErrorHandling.cc  ThreadPoolExecutor.cc  Utils.cc
src/world/: FlatGenerator.cc  LayeredGenerator.cc  MinecraftNoiseGenerator.cc  SingleMaterialGenerator.cc
tasks/: build.ps1  build.sh  ci-deps-linux.sh  clean.ps1  clean.sh  codeql.ps1  codeql.sh  coverage.ps1  coverage.sh  cppcheck.ps1  cppcheck.sh  format.ps1  format.sh  lint.ps1  lint.sh  profile-capture.ps1  profile-capture.sh  profile.ps1  profile.sh  sanitize.ps1  sanitize.sh  test.ps1  test.sh
tests/: CMakeLists.txt  TestMain.cc
tests/e2e/: FabricE2ETest.cc
tests/fixtures/: BgfxNoopFixture.hh  SDLFixture.hh
tests/unit/: CMakeLists.txt
(+628 files in other folders)
